<resources>
    <string name="app_name">MenuProject</string>
    <string name="text_help">This is the Help page! Click OK to go back.</string>
    <string name="text_settings">Settings</string>
    <string name="button_ok">OK</string>
    <string name="button_sms">SMS</string>
    <string name="button_phone">Phone</string>
    <string name="button_web">Web</string>
    <string name="button_map">Map</string>
    <string name="button_share">Share</string>
    <string name="text_share_title">Share the love</string>
    <string name="button_new_activity">New Activity</string>
    <string name="text_name_new_activity">Hello, Kristina Mancini</string>
    <string name="text_title_help">Help</string>
    <string name="text_title_about">About</string>
</resources>